--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.310.0",
-    "babel-polyfill": "^6.26.0",
-    "serverless-appsync-plugin": "^1.0.5"
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.310.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.15.2",
     "cors": "2.8.4",
     "env-cmd": "^5.0.0",
     "imports-loader": "^0.7.1",
     "jest": "^21.2.1",
+    "serverless": "^1.30.3",
+    "serverless-appsync-plugin": "^1.0.5",
     "serverless-offline": "^3.25.11",
     "serverless-webpack": "^4.1.0",
     "webpack": "^3.8.1",
